Tablet footer layout bug fix

--- a/design-final/css/style.css
+++ b/design-final/css/style.css
@@ -403,7 +403,7 @@
     font-family: Raleway;
 }
 .about-me-footer-mobile {
-    margin-top: 20px;
+    margin-top: 5px;
 }
 .about-me-footer-mobile h3 {
     font-family: Raleway;
